tests/baselines/reference/nullAssignedToUndefined.errors.txt
tests/cases/conformance/types/typeRelationships/assignmentCompatibility/nullAssignedToUndefined.ts(1,9): error TS2364: Invalid left-hand side of assignment expression.


==== tests/cases/conformance/types/typeRelationships/assignmentCompatibility/nullAssignedToUndefined.ts (1 errors) ====
    var x = undefined = null; // error
            ~~~~~~~~~
!!! error TS2364: Invalid left-hand side of assignment expression.
    var y: typeof undefined = null; // ok, widened